complete video poker

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <h1>Ka-Ching $$$ Poker</h1>
 <body>
-    <audio id="background_audio" autoplay="true" loop="loop">
+    <!-- <audio id="background_audio" autoplay="true" loop="loop">
         <source src="sounds/GOG.wav">
-    </audio>
+    </audio> -->
     <!-- <button onClick="playMyAudio()">Play Audio</button> -->
     <audio id="coin_audio">
         <source src="sounds/coin.wav">
